--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       align-items: center;
 
       /* 👇 Custom cursor globally */
-      cursor: url('assets/cursor.png') 16 16, auto;
+      cursor: url('cursor.png') 16 16, auto;
     }
 
     .container {
@@ -39,7 +39,7 @@
       transform: translate(-50%, -50%);
       width: 12%;
       height: 10%;
-      cursor: url('assets/cursor.png') 16 16, pointer; /* 👈 Optional: cursor only on button */
+      cursor: url('cursor.png') 16 16, pointer; /* 👈 Optional: cursor only on button */
       background-color: transparent;
       border: none;
     }
@@ -52,7 +52,7 @@
 <body>
   <div class="container">
     <img src="title.png" alt="Hand2English Title">
-    <button class="play-hotspot" onclick="window.location.href='https://John.com'" aria-label="Play"></button>
+    <button class="play-hotspot" onclick="window.location.href='https://hunter-was.github.io/Hand2English.translate/'" aria-label="Play"></button>
   </div>
 </body>
 </html>
