--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
     .play-hotspot {
       position: absolute;
       left: 50%;
-      top: 72%;
+      top: 88%; /* ⬅ moved further down to match red button */
       transform: translate(-50%, -50%);
-      width: 12%;
-      height: 10%;
-      cursor: url('cursor.png') 16 16, pointer; /* 👈 Optional: cursor only on button */
+      width: 18%;   /* ⬅ wider to match the PLAY button */
+      height: 12%;  /* ⬅ taller to cover the red button */
+      cursor: url('cursor.png') 16 16, pointer;
       background-color: transparent;
       border: none;
     }
@@ -52,7 +52,7 @@
 <body>
   <div class="container">
     <img src="title.png" alt="Hand2English Title">
-    <button class="play-hotspot" onclick="window.location.href='https://hunter-was.github.io/Hand2English.translate/'" aria-label="Play"></button>
+    <button class="play-hotspot" onclick="window.open('https://hunter-was.github.io/Hand2English.translate/', '_blank')" aria-label="Play"></button>
   </div>
 </body>
 </html>
