--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Image Play Button</title>
   <style>
-    /* Apply custom cursor globally */
+    /* Simple custom cursor applied to the whole page and button */
     html, body, button {
-      cursor: url('cursor.png') 16 16, auto;
+      cursor: url('cursor.png') 16 16;
     }
 
     html, body {
